--- a/app/app/sass/_main.scss
+++ b/app/app/sass/_main.scss
@@ -6,5 +6,5 @@
 @import "flexbox";
 @import "site";
 @import "btn";
-@import "fonts/catamaran";
+@import "fonts/ubuntu";
 @import "fonts/yantramanav";
