--- a/app/app/templates/trends.component.html
+++ b/app/app/templates/trends.component.html
@@ -89,7 +89,7 @@
         <!-- chat__add -->
         <form action="#" class="chat__add">
             <textarea placeholder="Добавить комментарий"></textarea>
-            <button type="submit">Send</button>
+            <button type="submit"></button>
         </form>
         <!-- /chat__add -->
 
