--- a/app/app/sass/_chat.scss
+++ b/app/app/sass/_chat.scss
@@ -9,6 +9,8 @@
 
   &__add {
     display: flex;
+    align-items: center;
+    justify-content: space-between;
     position: absolute;
     bottom: 0;
     left: 0;
@@ -18,11 +20,39 @@
     border-radius: 6px;
 
     textarea {
-      width: 100%;
+      @include main-font1();
+      width: calc(100% - 55px);
       height: 40px;
-      padding: 0 10px 0 0;
       border: none;
       background: none;
+    }
+
+    button[type=submit] {
+      position: relative;
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      background: $main-red-color-1;
+      border: none;
+      transition: box-shadow .15s ease-in-out;
+
+      &:hover { box-shadow: 0 0 10px rgba(0,0,0,.8) }
+
+      &:before {
+        @include absoluteCenter();
+        width: 50%;
+        height: 2px;
+        background: #fff;
+        content: '';
+      }
+
+      &:after {
+        @include absoluteCenter();
+        width: 2px;
+        height: 50%;
+        background: #fff;
+        content: '';
+      }
     }
   }
 
@@ -81,6 +111,13 @@
 @media (min-width: 640px) {
   .chat {
 
+    &__item {
+      font-size: 14px;
+    }
+
+    &__head time {
+      font-size: 12px;
+    }
   }
 }
 
