--- a/app/app/sass/_mixins.scss
+++ b/app/app/sass/_mixins.scss
@@ -1,12 +1,12 @@
 //fonts
 @mixin main-font1() {
-  font-family: 'Catamaran', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
   font-weight: 400;
   font-style: normal;
 }
 
 @mixin main-font2() {
-  font-family: 'Catamaran', sans-serif;
+  font-family: 'Ubuntu', sans-serif;
   font-weight: 700;
   font-style: normal;
 }
