--- a/app/app/templates/user.panel.component.html
+++ b/app/app/templates/user.panel.component.html
@@ -2,7 +2,7 @@
 <div class="user-panel">
 
     <!--user-panel__avatar-->
-    <div class="user-panel__avatar" *ngIf="data[ 'view' ] > 0">
+    <div class="user-panel__avatar">
         <img src="{{ data[ 'me' ][ 'image' ] }}" alt="">
     </div>
     <!--/user-panel__avatar-->
@@ -10,42 +10,13 @@
     <!--user-panel__settings-->
     <div class="user-panel__settings">
 
-        <!--user-panel__settings-btn-->
-        <button class="user-panel__settings-btn" (click)="openMenu( $event )" [class.active]="data[ 'popups' ][ 'user_menu' ]">
-            <span></span>
-
-            <svg *ngIf="data[ 'view' ]" x="0px" y="0px" viewBox="0 0 29.8 29.8" style="enable-background:new 0 0 29.8 29.8;" xml:space="preserve">
-<path d="M26.7,1.5c0.4,0,0.8,0.2,1.1,0.5c0.6,0.6,0.6,1.7,0,2.3l-9.6,9.6c-0.6,0.6-0.6,1.5,0,2.1l9.6,9.6c0.6,0.6,0.6,1.7,0,2.3
-	c-0.3,0.3-0.7,0.5-1.1,0.5s-0.8-0.2-1.1-0.5L16,18.3c-0.3-0.3-0.7-0.4-1.1-0.4s-0.8,0.1-1.1,0.4l-9.6,9.6c-0.3,0.3-0.7,0.5-1.1,0.5
-	S2.3,28.2,2,27.8c-0.6-0.6-0.6-1.7,0-2.3l9.6-9.6c0.6-0.6,0.6-1.5,0-2.1L2,4.3C1.3,3.6,1.3,2.6,2,2c0.3-0.3,0.7-0.5,1.1-0.5
-	S4,1.7,4.3,2l9.6,9.6c0.3,0.3,0.7,0.4,1.1,0.4s0.8-0.1,1.1-0.4L25.6,2C25.9,1.7,26.3,1.5,26.7,1.5 M26.7,0c-0.8,0-1.6,0.3-2.2,0.9
-	l-9.6,9.6L5.3,0.9C4.7,0.3,3.9,0,3.1,0S1.5,0.3,0.9,0.9c-1.2,1.2-1.2,3.2,0,4.4l9.6,9.6l-9.6,9.6c-1.2,1.2-1.2,3.2,0,4.4
-	c0.6,0.6,1.4,0.9,2.2,0.9s1.6-0.3,2.2-0.9l9.6-9.6l9.6,9.6c0.6,0.6,1.4,0.9,2.2,0.9s1.6-0.3,2.2-0.9c1.2-1.2,1.2-3.2,0-4.4l-9.6-9.6
-	l9.6-9.6c1.2-1.2,1.2-3.2,0-4.4C28.3,0.3,27.5,0,26.7,0L26.7,0z"/>
-</svg>
-            <svg *ngIf="!data[ 'view' ]" x="0px" y="0px" viewBox="0 0 250 250" style="enable-background:new 0 0 250 250;" xml:space="preserve">
-<g>
-	<path d="M221,12c4.5,0,8.8,1.8,12,5c6.6,6.6,6.6,17.4,0,24l-74.8,74.8c-5.1,5.1-5.1,13.3,0,18.4L233,209c6.6,6.6,6.6,17.4,0,24
-		c-3.2,3.2-7.5,5-12,5c-4.5,0-8.8-1.8-12-5l-74.8-74.8c-2.5-2.5-5.9-3.8-9.2-3.8s-6.7,1.3-9.2,3.8L41,233c-3.2,3.2-7.5,5-12,5
-		c-4.5,0-8.8-1.8-12-5c-6.6-6.6-6.6-17.4,0-24l74.8-74.8c2.4-2.4,3.8-5.7,3.8-9.2s-1.4-6.8-3.8-9.2L17,41c-6.6-6.6-6.6-17.4,0-24
-		c3.2-3.2,7.5-5,12-5c4.5,0,8.8,1.8,12,5l74.8,74.8c2.4,2.4,5.7,3.8,9.2,3.8c3.4,0,6.8-1.4,9.2-3.8L209,17
-		C212.2,13.8,216.5,12,221,12 M221-1c-7.7,0-15.4,2.9-21.2,8.8L125,82.6L50.2,7.8C44.4,1.9,36.7-1,29-1S13.6,1.9,7.8,7.8
-		c-11.7,11.7-11.7,30.7,0,42.4L82.6,125L7.8,199.8c-11.7,11.7-11.7,30.7,0,42.4c5.9,5.9,13.5,8.8,21.2,8.8s15.4-2.9,21.2-8.8
-		l74.8-74.8l74.8,74.8c5.9,5.9,13.5,8.8,21.2,8.8s15.4-2.9,21.2-8.8c11.7-11.7,11.7-30.7,0-42.4L167.4,125l74.8-74.8
-		c11.7-11.7,11.7-30.7,0-42.4C236.4,1.9,228.7-1,221-1L221-1z"/>
-</g>
-</svg>
-
-        </button>
-        <!--/user-panel__settings-btn-->
-
         <!--user-panel__settings-menu-->
-        <ul [@visibilityChanged]="data[ 'popups' ][ 'user_menu' ]" *ngIf="data[ 'popups' ][ 'user_menu' ]" class="user-panel__settings-menu">
+        <ul class="user-panel__settings-menu">
 
             <li *ngFor="let item of content">
                 <a href="#" (click)="userMenuClick( $event, item )">
-                    <i [innerHTML]="item.icon"></i>
-                    {{ item.text }}
+                    <i [innerHTML]="item.icon" title="{{ item.text }}"></i>
+                    <!--{{ item.text }}-->
                 </a>
             </li>
 
