--- a/app/app/sass/_mobile-menu.scss
+++ b/app/app/sass/_mobile-menu.scss
@@ -79,6 +79,27 @@
     align-items: center;
     padding: 0 15px 2px 69px;
   }
+  &__logo {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 72px;
+    background: $main-red-color-1;
+
+    svg {
+      @include absoluteCenter();
+      width: auto;
+      height: 60%;
+
+      path {
+        fill: $main-white-color;
+      }
+    }
+  }
   &__avatar {
     position: absolute;
     left: 14px;
