--- a/app/app/sass/_main-menu.scss
+++ b/app/app/sass/_main-menu.scss
@@ -61,8 +61,21 @@
       -webkit-transition: transform $animation-time ease-in-out;
       transition: transform $animation-time ease-in-out;
     }
-    &:hover,
+    &:hover {
+      color: $main-white-color;
+
+      .main-menu-icon {
+
+        path,
+        line,
+        circle,
+        polygon {
+          fill: $main-white-color;
+        }
+      }
+    }
     &.active {
+      cursor: default;
       color: $main-white-color;
 
       &:before {
@@ -78,9 +91,6 @@
           fill: $main-white-color;
         }
       }
-    }
-    &.active {
-      cursor: default;
     }
   }
 }
