--- a/app/app/sass/_sub-menu.scss
+++ b/app/app/sass/_sub-menu.scss
@@ -49,8 +49,20 @@
 			-webkit-transition: transform $animation-time ease-in-out;
 			transition: transform $animation-time ease-in-out;
 		}
-		&:hover,
+		&:hover {
+			color: $main-white-color;
+
+			svg {
+
+				path,
+				line,
+				circle {
+					fill: $main-white-color;
+				}
+			}
+		}
 		&.active {
+			cursor: default;
 			color: $main-white-color;
 
 			&:before {
@@ -65,9 +77,6 @@
 					fill: $main-white-color;
 				}
 			}
-		}
-		&.active {
-			cursor: default;
 		}
 	}
 }
