--- a/app/app/templates/trends.component.html
+++ b/app/app/templates/trends.component.html
@@ -90,7 +90,7 @@
 
         <!-- chat__add -->
         <form action="#" class="chat__add">
-            <textarea placeholder="Добавить комментарий"></textarea>
+            <textarea name="chat-text" placeholder="Добавить комментарий"></textarea>
             <button type="submit"></button>
         </form>
         <!-- /chat__add -->
