--- a/app/app/templates/trends.component.html
+++ b/app/app/templates/trends.component.html
@@ -13,7 +13,7 @@
 
             <!-- trends__thumbnail -->
             <a class="trends__thumbnail" [ngClass]=className>
-                <!--<img src="{{ 'http://localhost:3000/app/thumbnails/' + item[ 'thumbnail' ] }}" alt="">-->
+                <img src="{{ '/app/pic/thumbnails/' + item[ 'thumbnail' ] }}" alt="">
             </a>
             <!-- /trends__thumbnail -->
 
