--- a/app/app/sass/_trends.scss
+++ b/app/app/sass/_trends.scss
@@ -38,6 +38,11 @@
     background-position: center;
     background-repeat: no-repeat;
     transition: box-shadow .15s ease-in-out;
+
+    img {
+      display: block;
+      width: 100%;
+    }
   }
 
   &__description {
