--- a/app/app/templates/channel.component.html
+++ b/app/app/templates/channel.component.html
@@ -1,6 +1,6 @@
 <div class="channel">
 
-    <iframe *ngIf="data[ 'video' ]" width="560" height="315" src="https://www.youtube.com/embed/BfFK1oQaO80" frameborder="0" allowfullscreen></iframe>
+    <iframe *ngIf="data[ 'video' ]" width="560" height="315" [src]="data[ 'video' ][ 'url' ] | safe" frameborder="0" allowfullscreen></iframe>
 
     <!-- chat -->
     <div class="chat">
