--- a/app/app/templates/channel.component.html
+++ b/app/app/templates/channel.component.html
@@ -1,6 +1,6 @@
 <div class="channel">
 
-    <iframe *ngIf="data[ 'video' ]" width="560" height="315" [src]="data[ 'video' ][ 'url' ] | safe" frameborder="0" allowfullscreen></iframe>
+    <iframe class="channel__video" *ngIf="data[ 'video' ]" width="560" height="315" [src]="data[ 'video' ][ 'url' ] | safe" frameborder="0" allowfullscreen></iframe>
 
     <!-- chat -->
     <div class="chat">
@@ -21,48 +21,19 @@
             </div>
             <!-- /chat__item -->
 
-            <!--&lt;!&ndash; chat__item &ndash;&gt;-->
-            <!--<div class="chat__item">-->
-                <!--<div class="chat__pic"><img width="50" height="50" alt="" src="/app/pic/new1.jpg"></div>-->
-                <!--<div class="chat__wrap">-->
-                    <!--<div class="chat__head">-->
-                        <!--<strong class="chat__user">User Nmae</strong>-->
-                        <!--<time attr.datetime="{{1488562460 | time: true}}">{{1488562460 | time: false}}</time>-->
-                    <!--</div>-->
-                    <!--Comment comment comment-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--&lt;!&ndash; /chat__item &ndash;&gt;-->
-
-            <!--&lt;!&ndash; chat__item &ndash;&gt;-->
-            <!--<div class="chat__item">-->
-                <!--<div class="chat__pic"><img width="50" height="50" alt="" src="/app/pic/new1.jpg"></div>-->
-                <!--<div class="chat__wrap">-->
-                    <!--<div class="chat__head">-->
-                        <!--<strong class="chat__user">User Nmae</strong>-->
-                        <!--<time attr.datetime="{{1488476060 | time: true}}">{{1488476060 | time: false}}</time>-->
-                    <!--</div>-->
-                    <!--Comment comment comment-->
-                <!--</div>-->
-            <!--</div>-->
-            <!--&lt;!&ndash; /chat__item &ndash;&gt;-->
-
         </div>
         <!-- /chat__list -->
 
 
             <form class="chat__add" #chatForm="ngForm" novalidate (submit)="submit()">
 
-                <div class="hannel__field">
-            <textarea id="name" type="text" name="name"
-                      [(ngModel)]="text"
-                      #name="ngModel"
-                      placeholder="Добавить комментарий"
-                      required></textarea>
-                </div>
+                <textarea id="name" type="text" name="name"
+                          [(ngModel)]="text"
+                          #name="ngModel"
+                          placeholder="Добавить комментарий"
+                          required></textarea>
 
-                <button type="submit" class="btn" [disabled]="chatForm.invalid">Save</button>
-
+                <button type="submit" [disabled]="chatForm.invalid"></button>
 
             </form>
 
